# gardenzilla

./: .buildconfig  .gitignore  DEV  Dockerfile  Makefile  Rocket.toml  TODO  readme.md
NOTES/: .~lock.discount_model.ods#  DEV.aux  DEV.epub  DEV.fdb_latexmk  DEV.fls  DEV.out  DEV.tdo  DEV.tex  DEV.toc  IT fejlesztés.txt  Makefile  Makefile~  chart.tex  discount_model.ods  discounts.txt  history.txt  product.txt
NOTES/chapter/: giftcard.aux  giftcard.tex
api/: Cargo.toml
api/data/cash_register/: default.yml
api/src/: cors.rs  guard.rs  login.rs  main.rs  prelude.rs
api/src/controller/: account.rs  asset.rs  cash.rs  ledger.rs  login.rs  mod.rs  profile.rs  project.rs  repository.rs  transaction.rs  user.rs
api/src/model/: account.rs  asset.rs  ledger.rs  mod.rs  project.rs  repository.rs  transaction.rs
client/: angular.json  nginx.conf  package-lock.json  package.json
client/script/: favicon.sh
client/src/: index.html  styles.sass  styles.scss
client/src/app/: app.component.ts  app.module.ts
client/src/app/admin/: admin.module.ts  routing.module.ts
client/src/app/class/: account.ts  asset.ts  chart.ts  ledger.ts  model.ts  pager.ts  project.ts  repository.spec.ts  repository.ts  (+1 more)
core/: Cargo.toml
core/src/: cash.rs  cash_register.rs  check.rs  customer.rs  email.rs  error.rs  folder.rs  id.rs  lib.rs  login.rs  new.rs  password.rs  prelude.rs  product.rs  taxnumber.rs  unit.rs  user.rs
core/src/model/: account.rs  asset.rs  customer.rs  mod.rs  project.rs  repository.rs  transaction.rs  user.rs
core/tests/: test_user_storage.rs
(+96 files in other folders)
