[package]
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
license = "GPLv2"
name = "api"
version = "0.0.1"
workspace = "./.."

[dependencies]
core_lib = {path = "../core"}
# rocket = "0.4.5"w
chrono = {version = "0.4", features = ["serde"]}
ifeq = "*"
jwt = "0.4"
num-format = "*"
rocket_codegen = "*"
rocket_cors = "*"
rust-crypto = "0.2"
rustc-serialize = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
storaget = "0.8.1"

[dependencies.rocket]
default-features = false
version = "0.4.5"

[dependencies.rocket_contrib]
default-features = false
features = ["serve", "json"]
version = "*"
